WIP fix haikus overflow/bgStars/body etc ... + taille toiles haushka

--- a/phone.css
+++ b/phone.css
@@ -1123,6 +1123,15 @@
     }
 
 
+    .gisf-haushka {
+      height: 90px !important;
+  }
+    .gisf-haushka img {
+      width: 90px !important;
+      height: 90px !important;
+    }
+
+
     .aquarelleSubTitle {
         margin-block-start: 0.3em;
         margin-block-end: 0em;
